# roundtableapp

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  PROFILE_PICTURE_FLOW.md  README.md  implementation_plan_oracle.md  index.html  package-lock.json  package.json  server-updated.js  server.js
.claude/: settings.local.json
.docs/: infinite-scroll-fix.md
Icons/: script1.js
server/: server.js
src/: App.jsx  crypto.js  index.html  main.js  network.js  script.js  state.js  styles.css  ui.js  utils.js
src-legacy/: network.js  notifications.js  script.js  ui.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  notification.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ChatArea.jsx  GlassDropdown.jsx  MessageBubble.jsx  NotificationContainer.jsx  Particles.jsx  SettingsModal.jsx  Sidebar.jsx  SplashScreen.jsx  SummaryModal.jsx  Titlebar.jsx
src/context/: AppContext.jsx
src/hooks/: useNetwork.js  useOnlineMode.js  useProfilePictureBlobUrl.js  useProfilePictureSync.js  useTaskbarBadge.js  useTauriIntegration.js  useTheme.js
src/styles/: dropdowns.css  index.css
src/utils/: blobUrlManager.js  crypto.js  indexedDB.js  profilePictureBlobCache.js  profilePictureCache.js  simpleTaskbarBadge.js  taskbarBadge.js  taskbarBadgeAlt.js  taskbarBadgeTest.js
