[package]
name = "roundtable"
version = "0.1.0"
description = "A LAN Messaging App"
authors = ["d.veloper"]
edition = "2021"



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
socket2 = "0.5"
lazy_static = "1.4"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
once_cell = "1.21.3"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
